# simple-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
